...
    <string name="loyalty_wallet_no_barcode_title">No Barcode</string>
    <string name="loyalty_wallet_no_barcode_message">No barcode or card number to display. Please check the status of this card.</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="cancel_text_upper">CANCEL</string>
    <string name="cancel_text">Cancel</string>
    <string name="root">root</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="card_number_description">Show this card number in-store just like you would a physical loyalty card.</string>
    <string name="tap_card_to_show_barcode">Tap card to show barcode</string>
    <string name="no_barcode_displayed">This barcode cannot be displayed</string>
...
    <string name="continue_with_email">Continue with email</string>
    <string name="check_inbox">Check your inbox!</string>
    <string name="check_inbox_subtitle">We have just emailed a link to <b>%s</b>. Click the link and you will be logged in.</string>
    <string name="check_inbox_subtitle_part_1">We have just emailed a link to</string>
    <string name="check_inbox_subtitle_part_2">Click the link and you will be logged in.</string>
    <string name="open_mail">Open Mail</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="use_password">Use a password</string>
    <string name="use_magic_link">Use Magic Link</string>
    <string name="page_1_title">Payment linked loyalty. Magic!</string>
    <string name="page_1_description">Link your payment cards to selected loyalty cards and earn rewards and benefits automatically when you pay.</string>
    <string name="page_2_title">All your cards in one place</string>
    <string name="page_2_description">Store all your loyalty cards in a single digital wallet. View your rewards and points balances any time, anywhere.</string>
...
    <!-- Accept T&Cs -->
    <string name="one_last_step">One last step...</string>

    <!-- Add email -->
    <string name="add_email">Add email</string>
    <string name="add_email_subtitle">Please add your email address below</string>
    <string name="continue_button">Continue</string>
    <string name="email_label">Email</string>

    <string name="enter_email_text">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_failed_text">Registration failed</string>
...
